[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actrhythm"
version = "0.1.0"
description = "Rest-activity rhythm and fragmentation metrics for accelerometry"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ceyhun Olcan" }]
keywords = ["actigraphy", "accelerometry", "circadian", "fragmentation",
            "digital-phenotyping", "chronobiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15.15", "mypy>=2.1.0"]

[project.urls]
Homepage = "https://github.com/ceyhunolcan/actrhythm"
Issues = "https://github.com/ceyhunolcan/actrhythm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/actrhythm"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
